== 1.2.8 Does It Offend You, Yeah?
 * Fix gemspec to work w/ Bundler [smparkes]
 * Add SSL support [tmm1]
 * Catch Errno::EPERM in Process.running? [Tony Kemp]
   On some systems (e.g. OpenBSD) you receive an EPERM exception if
   you try to Process.getpgid on a process you do not own (even if you
   are root). But it does mean that the process exists, so return true.
 * Fix Rails version check that select which Rack adapter to use. Was using CGI adapter in Rails 3.
 * Ignore SIGHUP when no restart block is given

== 1.2.7 No Hup
 * Support multiple Ruby version (fat binaries under windows)
 * Do not trap unsupported HUP signal on Windows

== 1.2.6 Crazy Delicious
 * Make work with Rails 3 out-of-the-box.
 * Auto-detect and load config.ru files on start. Makes Rails 3 work.
 * Fix signals being ignored under 1.9 when daemonized.

== 1.2.5 This Is Not A Web Server
 * Add rolling restart support (--onebyone option) [sikachu]
 * Force external_encoding of request's body to ASCII_8BIT [jeremyz]
 * Ensure Rack base API is used in Rails adapter only if version >= 2.3.2 [#111 state:resolved]

== 1.2.4 Flaming Astroboy
 * Fix a few issues in thin to make it a better "gem citizen" [josh]
 * Fix test for rack based Rails in adapter under Ruby >= 1.8.7 [#109 state:resolved]
 * Fix Remote address spoofing vulnerability in Connection#remote_address [Alexey Borzenkov]
 * Fix uninitialized constant ActionController::Dispatcher error with Rails 1.2.3 [Chris Anderton] [#103 state:resolved]

== 1.2.2 I Find Your Lack of Sauce Disturbing release
 * Fix force kill under 1.9 [Alexey Chebotar]
 * Fix regression when --only option is used w/ --socket.
 * Add process name 'tag' functionality. Easier to distinguish thin daemons 
   from eachother in process listing [ctcherry]

== 1.2.1 Asynctilicious Ultra Supreme release
 * Require Rack 1.0.0
 * Require EventMachine 0.12.6
 * Use Rails Rack based dispatcher when available
 * Allow String for response body