@@ -1,4 +1,5 @@
 == 1.2.8 Does It Offend You, Yeah?
+ * Accept IE7 badly encoded URL (eg.: %uEEEE)
  * Fix gemspec to work w/ Bundler [smparkes]
  * Add SSL support [tmm1]
  * Catch Errno::EPERM in Process.running? [Tony Kemp]
